--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = "http://example.org/"
+baseURL = "https://rocstar.wobbly.earth/"
 languageCode = "en-us"
 title = "ROCSTAR"
 theme = "ananke"
