--- a/config.toml
+++ b/config.toml
@@ -3,3 +3,16 @@ languageCode = "en-us"
 title = "ROCSTAR"
 theme = "ananke"
 publishDir = "docs"
+
+[params]
+  favicon = ""
+  description = ""
+  facebook = ""
+  twitter = "https://twitter.com/r_rietje"
+  envelope = "mailto:yakhontova@geod.uni-bonn.de"
+  instagram = ""
+  youtube = ""
+  github = "https://github.com/orgs/wobbly-earth/teams"
+  gitlab = ""
+  linkedin = ""
+  mastodon = ""
