cleanup of duplicate and superflous files, add functioning svg logo for envelope, change main background image

--- a/config.toml
+++ b/config.toml
@@ -16,3 +16,6 @@ publishDir = "docs"
   gitlab = ""
   linkedin = ""
   mastodon = ""
+[[resources]]
+  name = "sandysteps"
+  src = "resources/images/sandysteps_orig.jpg"
