add custom css file, make social buttons more consistent, and other stuff

--- a/config.toml
+++ b/config.toml
@@ -5,6 +5,9 @@ theme = "ananke"
 publishDir = "docs"
 
 [params]
+  body_classes = "noto bg-near-white"
+  custom_css = ["css/rocstar.css"]
+  background_color_class= "bg-near-black"
   favicon = ""
   description = ""
   facebook = ""
