--- a/config.toml
+++ b/config.toml
@@ -12,7 +12,7 @@ publishDir = "docs"
   description = ""
   facebook = ""
   twitter = "https://twitter.com/r_rietje"
-  envelope = "mailto:yakhontova@geod.uni-bonn.de"
+  mail = "mailto:yakhontova@geod.uni-bonn.de"
   instagram = ""
   youtube = ""
   github = "https://github.com/orgs/wobbly-earth/teams"
