fix favicon and logo work, also add custom color rorange and hover-rorange to rocstar.css

--- a/config.toml
+++ b/config.toml
@@ -8,7 +8,7 @@ publishDir = "docs"
   body_classes = "noto bg-near-white"
   custom_css = ["css/rocstar.css"]
   background_color_class= "bg-near-black"
-  favicon = ""
+  favicon = "favicon.ico"
   description = ""
   facebook = ""
   twitter = "https://twitter.com/r_rietje"
